feat: add orders, upload file to minio;fix: uint;add: created at, updated at

--- a/config.env
+++ b/config.env
@@ -5,3 +5,6 @@ DB_PASS=password
 DB_NAME=florists
 JWT_SECRET=supersecret12345!@#$%
 JWT_EXPIRED= 72
+MINIO_ENDPOINT=http://minio.yustinayasin.com
+MINIO_ACCESS_KEY=lWIpOOeKAd8jQlUYU4HM
+MINIO_SECRET_KEY=F3wzlyqdDuIxCkZWX8WCr5V0NMqhf8c1UWYhiKHv
