--- a/config.env
+++ b/config.env
@@ -5,6 +5,6 @@ DB_PASS=password
 DB_NAME=florists
 JWT_SECRET=supersecret12345!@#$%
 JWT_EXPIRED= 72
-MINIO_ENDPOINT=http://139.99.96.99:9000
+MINIO_ENDPOINT=139.99.96.99:9000
 MINIO_ACCESS_KEY=lWIpOOeKAd8jQlUYU4HM
 MINIO_SECRET_KEY=F3wzlyqdDuIxCkZWX8WCr5V0NMqhf8c1UWYhiKHv
