--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=admin
-DB_PASS=password
+DB_USER=myrootuser
+DB_PASS=mysecretpassword
 DB_NAME=florists
 JWT_SECRET=supersecret12345!@#$%
 JWT_EXPIRED= 72
