fix: build config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,9 @@ jobs:
           git pull origin master
       
       - name: Docker compose
-        run: sudo docker-compose up
-        
+        run: |
+          sudo docker build -t florist-backend:latest
+          sudo docker-compose up
+
       
 
