--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 services:
   backend:
-    image: florist-backend
+    image: florist-backend:latest
     ports:
       - "8081:8080"
     networks:
