fix: build actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
       
       - name: Docker compose
         run: |
-          sudo docker build -t florist-backend:latest
+          sudo docker build --tag florist-backend:latest --file ./Dockerfile
           sudo docker-compose up
 
       
