--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,18 +48,11 @@ jobs:
       
       - name: Debug
         run: |
-          pwd
-          ls
-          cd /
-          ls
-          sudo docker images
+          sudo sshpass -p "${{ secrets.VPS_PASSWORD }}" ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.VPS_IPV4 }} 'pwd; ls; sudo docker images'
 
       - name: Move into the repository and pull the lastest version
         run: |
-          sudo docker pull ystnysn/florist-backend:latest
-          cd /home/runner/work/florist-gin/florist-gin
-          git checkout master
-          git pull origin master
+          sudo sshpass -p "${{ secrets.VPS_PASSWORD }}" ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.VPS_IPV4 }} 'sudo docker pull ystnysn/florist-backend:latest; git clone git@github.com:yustinayasin/florist-gin.git; ls'
       
       - name: Docker compose
         run: |
