--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       
       - name: Debug
         run: |
-          sudo sshpass -p "${{ secrets.VPS_PASSWORD }}" ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.VPS_IPV4 }} 'pwd; ls; sudo docker images; eval "$(ssh-agent -s)"; ssh-add ~/.ssh/githubvps; ssh -Tv git@github.com'
+          sudo sshpass -p "${{ secrets.VPS_PASSWORD }}" ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.VPS_IPV4 }} 'pwd; ls; sudo docker images; eval "$(ssh-agent -s)"; ssh-add ~/.ssh/githubvps'
 
       - name: Move into the repository and pull the lastest version
         run: |
