--- a/compose.yml
+++ b/compose.yml
@@ -16,7 +16,7 @@ services:
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - DB_NAME=${DB_NAME}
-    command: ["./backend"] 
+    command: ["./florist-gin"] 
     restart: always
 
   database:
