--- a/compose.yml
+++ b/compose.yml
@@ -5,10 +5,10 @@ services:
       - "8081:8080"
     networks:
       - back-tier
-    env_file:
-      - config.env
     volumes:
       - /config.env:/src/.env
+    env_file:
+      - /src/.env
     environment:
       - GIN_MODE=release 
       - DB_HOST=${DB_HOST}
@@ -26,7 +26,7 @@ services:
     networks:
       - back-tier
     env_file:
-      - config.env
+      - /src/.env
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
