--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - /config.env:/src/.env
     env_file:
-      - config.env
+      - ./config.env
     environment:
       - GIN_MODE=release 
       - DB_HOST=${DB_HOST}
@@ -26,7 +26,7 @@ services:
     networks:
       - back-tier
     env_file:
-      - config.env
+      - ./config.env
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
