--- a/compose.yml
+++ b/compose.yml
@@ -48,4 +48,12 @@ secrets:
     external: true
 
 networks:
-  back-tier: {}
+  back-tier:
+    env_file:
+      - ./config.env
+    environment: 
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_NAME=${DB_NAME}
