--- a/compose.yml
+++ b/compose.yml
@@ -43,17 +43,5 @@ configs:
   httpd-config:
     external: true
 
-secrets:
-  server-certificate:
-    external: true
-
 networks:
-  back-tier:
-    env_file:
-      - ./config.env
-    environment: 
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
-      - DB_NAME=${DB_NAME}
+  back-tier: {}
