--- a/compose.yml
+++ b/compose.yml
@@ -25,12 +25,10 @@ services:
       - "5433:5432"
     networks:
       - back-tier
-    env_file:
-      - ./config.env
-    # environment:
-    #   - POSTGRES_DB=${DB_NAME}
-    #   - POSTGRES_USER=${DB_USER}
-    #   - POSTGRES_PASSWORD=${DB_PASS}
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: always
