--- a/compose.yml
+++ b/compose.yml
@@ -25,6 +25,8 @@ services:
       - "5433:5432"
     networks:
       - back-tier
+    env_file:
+      - ./config.env
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
