--- a/compose.yml
+++ b/compose.yml
@@ -26,8 +26,9 @@ services:
     networks:
       - back-tier
     command:
-      - "ls"
-      - "cat ./config.env"
+      - "/bin/sh" 
+      - "-c"        
+      - "cd /src && ls && cat config.env"
     env_file:
       - ./config.env
     environment:
