--- a/compose.yml
+++ b/compose.yml
@@ -15,7 +15,7 @@ services:
     #   - DB_PASS=${DB_PASS}
     #   - DB_NAME=${DB_NAME}
     volumes:
-      - /config.env:/src/.env
+      - ./config.env:/src/.env
     command: ["./florist-gin"] 
     restart: always
 
@@ -28,7 +28,7 @@ services:
     command:
       - "/bin/sh" 
       - "-c"        
-      - "cd /src && ls -a && cat config.env"
+      - "cd /src && ls -a && cat .env"
     env_file:
       - ./config.env
     environment:
